Removed cassandra and updated spark to version 3.5.1